2000-04-04  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/register/gnome/gnucash-style.c: update the styles
 	appropriately for the changes below.

	* src/register/splitreg.c: configure the ledger style register
	with a xfer to field in all modes.

	* src/SplitLedger.c (xaccSRLoadRegister): remove stock price hack.
	many code cleanups throughout file.

2000-04-03  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/gnome/window-register.c: changed menu definitions to be
	statically allocated.
	* src/gnome/window-main.c: ditto

	* src/SplitLedger.c: added extra checks for boundary conditions.
	When refreshing, try to go to the same cell offset as before.

2000-04-01  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/SplitLedger.c: more generalizations needed for general
 	ledger operation.

	* src/register/splitreg.c (configLayout): add the xto cell into
	the transaction cursor.

 2000-03-31  Rob Browning  <rlb@cs.utexas.edu>

 	* src/scm/bootstrap.scm.in: use new GNC_EXPANDED_ vars.

 	* src/scm/Makefile.in: set top_srcdir and include Makefile.init

 	* src/reports/pathconfig.h.in: use new GNC_EXPANDED_ vars.

 	* src/quotes/gnc-prices.in: new file.

 	* src/quotes/gnc-prices: deleted.

 	* src/guile/gnucash.h.in: use new GNC_EXPANDED_ vars.

 	* src/guile/i18n.h.in: use new GNC_EXPANDED_ vars.

 	* src/guile/Makefile.in (top_srcdir): set.

 	* src/Makefile.in: minor cleanups and safety code.

 	* make-gnucash-patch.in: new file.

 	* make-gnucash-patch: deleted.

 	* lib/Makefile.in: re-configure g-wrap after every distclean and
 	rebuild/install it on every build.

 	* gnucash: fix the doc-path to match the new structure.  This
 	fixes things back the way they were, but now we need to add
 	runtime locale detection.

 	* doc/build-system: new file - should eventually cover
 	build-system info and justifications.

 	* configure.in: changes to accomodate the new GNC_EXPANDED_*
 	vars.  See doc/build-system for a summary.
