@@ -1,3 +1,14 @@
+2000-04-05  Dave Peticolas  <peticola@cs.ucdavis.edu>
+
+	* src/register/table-allgui.c: more error checking
+
+	* src/SplitLedger.c: more cleanup. Fix a bug in refreshing a register
+	in auto-mode where the current transaction has been deleted.
+
+	* src/scm/report/balance-and-pnl.scm: put sub-accouts below their
+	parent accounts and indent their names. Align the columns better.
+	Print fully-qualified names.
+
 2000-04-04  Dave Peticolas  <peticola@cs.ucdavis.edu>
 
 	* src/register/gnome/gnucash-style.c: update the styles
